# ultra-claude

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v0.1.0-MILESTONE-AUDIT.md
.planning/phases/01-project-skeleton-pypi-name-reservation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md  PUBLISH.md
.planning/phases/02-config-schema-yaml-loader/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  deferred-items.md
.planning/phases/03-transcript-module/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-adapter-protocol-claudeadapter/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  deferred-items.md
.planning/phases/05-stop-conditions/: 05-01-PLAN.md  05-01-SUMMARY.md  05-CONTEXT.md
.planning/phases/06-orchestrator-loop/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md
.planning/phases/07-gemini-codex-adapters/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  deferred-items.md
.planning/phases/08-cli-surface-debate-preset/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md  deferred-items.md
.planning/phases/09-tests-docs-examples-v010-release/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md  09-CONTEXT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: README.md
examples/transcripts/: sample-debate.md  sample-debate.md.jsonl
src/ultra_claude/: __init__.py  cli.py  config.py  exceptions.py  orchestrator.py  registry.py  stop_conditions.py  transcript.py
src/ultra_claude/adapters/: __init__.py  base.py  claude.py  codex.py  gemini.py
src/ultra_claude/presets/: debate.yaml
tests/: test_adapter_claude.py  test_adapter_codex.py  test_adapter_gemini.py  test_adapters_base.py  test_cli.py  test_config.py  test_e2e_with_echo_cli.py  test_orchestrator.py  test_stop_conditions.py  test_subprocess_lint.py  test_transcript.py
tests/fixtures/: echo_cli.py
